<resources>
    <string name="app_name">Tour Director</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_password2">Password:</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter Password</string>
    <string name="text_login">Login</string>
    <string name="text_welcome_desc">For use by DATW Tour Directors only.</string>
    <string name="text_forgot_your_details">Forgot your details?</string>
    <string name="username_empty">Please enter username</string>
    <string name="username_invalid">Please enter valid username</string>
    <string name="password_empty">Please enter your password</string>
    <string name="password_invalid">Please must me at least 6 digits long</string>
    <string name="text_security_check">Security check</string>
    <string name="text_security_code_desc">A code will be sent to you in next 60 seconds.</string>
    <string name="hint_code">Enter code</string>
    <string name="text_didnt_receive_code">Didn\'t receive your code?</string>
    <string name="text_enter_code">Enter code</string>
    <string name="text_title_menu"><![CDATA[Welcome,\n<Name>]]></string>
    <string name="text_create_new_group">Create New Group</string>
    <string name="text_view_edit">View/Edit/Add to existing Group</string>
    <string name="text_edit_my_details">Edit my details</string>
    <string name="text_enter_group_name">Enter Group Name</string>
    <string name="hint_group_name">Enter group name</string>
    <string name="text_create">Create</string>
    <string name="text_success">Success!</string>
    <string name="text_add_photos">Add Photos</string>
    <string name="text_success_msg"><![CDATA[You have successfully created <Group Name>!]]></string>
    <string name="text_existing_group">Existing Group</string>
    <string name="text_edit_group">Edit Group</string>
    <string name="text_notify_completion">Notify DATW of completion</string>
    <string name="text_choose_from">Choose from existing Groups below</string>
    <string name="text_delete_msg">To delete photos tap the icon next to the image.</string>
    <string name="text_need_help">Need Help?</string>
    <string name="text_cant_remember_login_details">Can\'t remember your login details?</string>
    <string name="text_didnt_receive_sms">Didn\'t receive an SMS with a security code?</string>
    <string name="text_unsure_how_to">Unsure how to use this app?</string>
    <string name="text_no_problem">No problem! Please call the office</string>
    <string name="text_update_my_details">Update my details</string>
    <string name="profile_update_success">User Details Updated Successfully</string>
    <string name="text_email_address">Email Address:</string>
    <string name="hint_email_address">Enter Email Address</string>
    <string name="hint_address">Enter Address</string>
    <string name="text_address">Address:</string>
    <string name="hint_phoneno">Enter phone number</string>
    <string name="text_phone_no">Phone number:</string>
    <string name="text_dob">Date of Birth:</string>
    <string name="hint_dob">Enter date of birth</string>
    <string name="hint_quantus">Enter qantas FF number</string>
    <string name="text_quantus_ff_no">Qantas FF number</string>
    <string name="text_save">Save</string>
    <string name="text_menu">Menu</string>
    <string name="text_help">Help?</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="internet_error">No internet connection. Please try again</string>
    <string name="text_login_success">Successfully logged in.</string>
    <string name="text_error_msg">Something went wrong.</string>
    <string name="otp_code_empty">Please enter otp code</string>
    <string name="text_are_you_sure_you_want_to_delete_file">Are you sure you want to delete file?</string>
    <string name="text_are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="text_exit_app">Are you sure you want to exit application?</string>
    <string name="admin_login_error">No access!!! Please use iOS application</string>
    <string name="please_enter_group_name">Please enter group name</string>

</resources>