<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_12sdp"
                android:orientation="vertical">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:scaleType="fitXY"
                    app:riv_corner_radius="@dimen/_7sdp"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSecurityCheck"
                    style="@style/_tv20WhiteBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:text="@string/text_security_check"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEnterCode"
                    style="@style/_tv14WhiteMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_enter_code"
                    android:textAlignment="textStart"
                    app:layout_constraintBottom_toBottomOf="@id/edtEnterCode"
                    app:layout_constraintEnd_toStartOf="@+id/edtEnterCode"
                    app:layout_constraintHorizontal_weight="3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/edtEnterCode" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtEnterCode"
                    style="@style/_edtAuth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/bg_white"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_code"
                    android:imeOptions="actionNext"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:padding="@dimen/_7sdp"
                    android:singleLine="true"
                    android:text="@={securityCodeCheckViewModel._otp_code}"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="7"
                    app:layout_constraintStart_toEndOf="@id/tvEnterCode"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription" />



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    style="@style/_btnNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:elevation="@dimen/_5sdp"
                    android:paddingStart="@dimen/_40sdp"
                    android:paddingEnd="@dimen/_40sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/text_login"
                    app:backgroundTint="@color/colorAccent"
                    app:cornerRadius="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtEnterCode"
                    app:rippleColor="@color/colorAccent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDescription"
                    style="@style/_tv14WhiteMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:text="@string/text_security_code_desc"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSecurityCheck" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDidntReceiveCode"
                    style="@style/_btnNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:elevation="@dimen/_5sdp"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:text="@string/text_didnt_receive_code"
                    app:backgroundTint="@color/colorAccent"
                    app:cornerRadius="@dimen/_14sdp"
                    app:strokeColor="@color/colorRed"
                    app:strokeWidth="@dimen/_1sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnLogin"
                    app:rippleColor="@color/colorAccent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <data>

        <variable
            name="securityCodeCheckViewModel"
            type="com.app.datwdt.viewmodel.auth.SecurityCodeCheckViewModel" />

    </data>
</layout>