<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_12sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_40sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_logo"
                    app:riv_corner_radius="@dimen/_7sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <LinearLayout
                    android:id="@+id/llHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@+id/ivLogo">

                    <include android:id="@+id/header"
                        layout="@layout/layout_header" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCantRememberLoginDetails"
                    style="@style/_tv14BlackMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/text_cant_remember_login_details"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llHeader" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDidntReceiveSms"
                    style="@style/_tv14BlackMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/text_didnt_receive_sms"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCantRememberLoginDetails" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvUnsureHowTo"
                    style="@style/_tv14BlackMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/text_unsure_how_to"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDidntReceiveSms" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvNoProblem"
                    style="@style/_tv18BlackBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/text_no_problem"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvUnsureHowTo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <data>

        <variable
            name="needHelpViewModel"
            type="com.app.datwdt.viewmodel.main.NeedHelpViewModel" />

    </data>
</layout>