<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_12sdp"
                android:orientation="vertical">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_logo"
                    app:riv_corner_radius="@dimen/_7sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvWelcome"
                    style="@style/_tv20WhiteBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:text="@string/text_welcome"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvUsername"
                    style="@style/_tv14WhiteMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_username"
                    android:textAlignment="textStart"
                    app:layout_constraintBottom_toBottomOf="@id/edtUsername"
                    app:layout_constraintEnd_toStartOf="@+id/edtUsername"
                    app:layout_constraintHorizontal_weight="3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/edtUsername" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtUsername"
                    style="@style/_edtAuth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/bg_white"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:padding="@dimen/_7sdp"
                    android:singleLine="true"
                    android:text="@={loginViewModel._username}"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="7"
                    app:layout_constraintStart_toEndOf="@id/tvUsername"
                    app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPassword"
                    style="@style/_tv14WhiteMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_password"
                    android:textAlignment="textStart"
                    app:layout_constraintBottom_toBottomOf="@id/edtPassword"
                    app:layout_constraintHorizontal_weight="3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtUsername"
                    app:layout_constraintTop_toTopOf="@+id/edtPassword" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPassword"
                    style="@style/_edtAuth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_white"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:padding="@dimen/_7sdp"
                    android:singleLine="true"
                    android:text="@={loginViewModel._password}"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="7"
                    app:layout_constraintStart_toEndOf="@id/tvUsername"
                    app:layout_constraintTop_toBottomOf="@+id/edtUsername" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    style="@style/_btnNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:elevation="@dimen/_5sdp"
                    android:paddingStart="@dimen/_40sdp"
                    android:paddingEnd="@dimen/_40sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/text_login"
                    app:backgroundTint="@color/colorAccent"
                    app:cornerRadius="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtPassword"
                    app:rippleColor="@color/colorAccent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDescription"
                    style="@style/_tv14WhiteMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:text="@string/text_welcome_desc"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnForgotYourDetails"
                    style="@style/_btnNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:elevation="@dimen/_5sdp"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/text_forgot_your_details"
                    app:backgroundTint="@color/colorAccent"
                    app:cornerRadius="@dimen/_14sdp"
                    app:strokeColor="@color/colorRed"
                    android:visibility="gone"
                    app:strokeWidth="@dimen/_1sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDescription"
                    app:rippleColor="@color/colorAccent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <data>

        <variable
            name="loginViewModel"
            type="com.app.datwdt.viewmodel.auth.LoginViewModel" />

    </data>
</layout>